--- a/package.json
+++ b/package.json
@@ -5,10 +5,18 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@vitejs/plugin-react": "^4.3.4",
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.2",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "datatables.net-bs5": "^2.2.2",
+        "datatables.net-react": "^1.0.0",
+        "react": "^19.1.0",
+        "react-dom": "^19.1.0",
+        "sweetalert2": "^11.17.2"
     }
 }
