patch: remove unnecesary component and add manajer, SPV user

--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
         "datatables.net-bs5": "^2.2.2",
         "datatables.net-react": "^1.0.0",
         "react": "^19.1.0",
+        "react-bootstrap": "^2.10.9",
         "react-dom": "^19.1.0",
+        "react-router-dom": "^7.5.0",
         "sweetalert2": "^11.17.2"
     }
 }
